<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_feed"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_friend"
        android:icon="@drawable/ic_user"
        android:title="@string/friend_tab" />

    <item
        android:id="@+id/navigation_write"
        android:icon="@drawable/ic_plus_feed"
        android:title="@string/add_feed_tab" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat_tab2_24dp"
        android:title="@string/chat_tab" />

    <item
        android:id="@+id/navigation_mypage"
        android:icon="@drawable/ic_profile"
        android:title="@string/mypage_tab" />

</menu>