<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FAFAFA"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:text="@string/user_name"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_profile"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_profile"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@mipmap/ic_lyan1_round" />

        <ImageButton
            android:id="@+id/expanded_menuButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginBottom="14dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_ellipsis_vertical" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_contents"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout_header">

        <TextView
            android:id="@+id/text_contents"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:layout_marginTop="14dp"
            android:layout_marginRight="14dp"
            android:layout_marginBottom="14dp"
            android:text="@string/text_contents"
            android:textColor="@color/black"
            app:layout_constraintBottom_toTopOf="@id/photo_viewpager"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.example.sns.main.ui.feed.ImageContentsViewPager
            android:id="@+id/photo_viewpager"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_contents" />

        <TextView
            android:id="@+id/chat_numbers_received_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/white"
            android:background="@drawable/layout_photo_order_text_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/photo_viewpager" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/constraintLayout_contents">

        <TextView
            android:id="@+id/like_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:text="141개"
            app:layout_constraintBottom_toTopOf="@id/like_button"
            app:layout_constraintRight_toLeftOf="@id/photo_indicator"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <me.relex.circleindicator.CircleIndicator
            android:id="@+id/photo_indicator"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            app:ci_drawable="@drawable/circle_indicator"
            app:ci_height="5dp"
            app:ci_margin="4dp"
            app:ci_width="5dp"
            app:layout_constraintBottom_toTopOf="@id/comments_button"
            app:layout_constraintLeft_toRightOf="@id/like_number"
            app:layout_constraintRight_toLeftOf="@id/comments_number"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/comments_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:layout_marginBottom="14dp"
            android:text="2개"
            app:layout_constraintBottom_toTopOf="@id/share_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toRightOf="@id/photo_indicator"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/like_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableLeft="@drawable/ic_heart_outline"
            android:text="@string/like_button"
            android:textColor="#666362"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/comments_button"
            app:layout_constraintTop_toTopOf="parent" />
        <!--  android:drawableTint="@android:color/holo_blue_light" -->

        <com.google.android.material.button.MaterialButton
            android:id="@+id/comments_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_chatbox_outline"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:text="@string/comments_button"
            android:background="@android:color/transparent"
            android:textColor="#666362"
            app:rippleColor="#D1D0CE"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/like_button"
            app:layout_constraintRight_toLeftOf="@id/share_button"
            app:layout_constraintTop_toTopOf="parent"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/share_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:drawableLeft="@drawable/ic_baseline_share_32"
            android:text="@string/share_button"
            android:background="@android:color/transparent"
            android:textColor="#666362"
            app:rippleColor="#D1D0CE"
            app:cornerRadius="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/comments_button"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>